syntax = "proto3";

option csharp_namespace = "Node";
import "google/protobuf/wrappers.proto";

service BlockHandlingApi {
    rpc Create(CreateBlockRequest) returns (CreateBlockReply);
    rpc Read(ReadBlockRequest) returns (ReadBlockReply);
    rpc List(ListBlocksRequest) returns (ListBlocksReply);
}

message CreateBlockRequest {
  string apiKey = 1;
  string blockData = 2;
}

message CreateBlockReply {
  string blockId = 1;
  string status = 2;
  string blockHash = 3;
}

message ReadBlockRequest {
  string apiKey = 1;
  string blockId = 2;
  string blockHash = 3;
}

message ReadBlockReply {
  string blockId = 1;
  string status = 2;
  string blockHash = 3;
  string blockData = 4;
  string nonce = 5;
  string createdOn = 6;
}

message ListBlocksRequest {
  string apiKey = 1;
  bool includeBody = 2;
}

message ListBlocksReply {
  repeated Block blocks = 1;
}

message Block {
  string blockId = 1;
  string status = 2;
  string blockHash = 3;
  string blockData = 4;
}